<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_str"
                android:textColor="#ff0008"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/address_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:hint="@string/et_hint_str"
                    android:singleLine="true"
                    android:textColor="#333"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/query_btn"
                    android:layout_width="80dp"
                    android:layout_height="34dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/query_btn_bg"
                    android:text="@string/query_str"
                    android:textAllCaps="false"
                    android:textColor="#ffffff" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3D2oetdNuZUqQHPJmcMDDHYoqkyNVsFk9r"
                    android:textColor="#666666" />

                <TextView
                    android:id="@+id/try_tv"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text="@string/try_it_str"
                    android:textColor="#666666" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#eee"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/account_detail_str"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Address_str"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/address_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="#333"
                    android:textSize="14sp"
                    tools:text="address" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance_str"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/balance_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="#333"
                    android:textSize="14sp"
                    tools:text="balance" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amount_sent_str"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/total_amount_sent_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="#333"
                    android:textSize="14sp"
                    tools:text="totalAmountSent" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eee" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amount_received_str"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/total_amount_received_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="#333"
                    android:textSize="14sp"
                    tools:text="totalAmountReceived" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eee" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>